cleaned up exmamples

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -56,9 +56,9 @@
     "ens = eee.Ensemble()\n",
     "ens.add_species(\"hdna\",dG0=0,observable=True)\n",
     "ens.add_species(\"h\",dG0=5)\n",
-    "ens.add_species(\"l2e\",dG0=5,mu_stoich={\"iptg\":2},observable=False)\n",
+    "ens.add_species(\"l2e\",dG0=5,observable=False,iptg=2)\n",
     "\n",
-    "df = ens.get_obs(mu_dict={\"iptg\":np.linspace(0,5)})\n",
+    "df = ens.get_obs(ligand_dict={\"iptg\":np.linspace(0,5)})\n",
     "fig, ax = plt.subplots(1,figsize=(6,6))\n",
     "ax.plot(df.iptg,df.fx_obs)\n",
     "ax.set_xlabel(\"ln([iptg]) chemical potential\")\n",
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "ddg_df = eee.io.load_ddg(\"../tests/data_for_tests/test_ddg/ddg.csv\")\n",
+    "ddg_df = eee.io.read_ddg(\"../tests/data_for_tests/test_ddg/ddg.csv\")\n",
     "ddg_df"
    ]
   },
@@ -242,28 +242,17 @@
    "source": [
     "### Simulate evolution\n",
     "\n",
-    "For this, we are going to use the `eee.evolve.simulate_tree` function. First, see what it's arguments are.\n"
+    "For this, we are going to use the `eee.simulation.calcs.WrightFisherTreeSimulation` function. First, see what it's arguments are.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "83448fb5-1fc7-4041-a58d-074d3f172abe",
+   "id": "39008562-c652-4376-9662-d8d1978b7c22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function simulate_tree in module eee.evolve.simulate_tree:\n",
-      "\n",
-      "simulate_tree(ens, ddg_df, mu_dict, fitness_fcns, newick, select_on='fx_obs', fitness_kwargs={}, T=298.15, population_size=1000, mutation_rate=0.01, num_generations=100, burn_in_generations=10)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(eee.evolve.simulate_tree)"
+    "#help(eee.simulation.calcs.WrightFisherTreeSimulation)"
    ]
   },
   {
@@ -283,118 +272,47 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc0c46c8c42f432388574ac0e02cd64d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:303: UserWarning: \n",
-      "\n",
-      "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 3 of 5 requested.\n",
-      "Try increasing num_generations and/or mutation_rate.\n",
-      "\n",
-      "\n",
-      "  warnings.warn(w)\n"
+     "ename": "WrappedFunctionException",
+     "evalue": "\n\nCaught exception in function 'run'. Returning to starting\ndirectory and cleaning up. Check error stack for cause of\nthis error.\n\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "File \u001b[0;32m~/work/programming/git-clones/eee/eee/_private/interface.py:32\u001b[0m, in \u001b[0;36mrun_cleanly.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 32\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[0;32m~/work/programming/git-clones/eee/eee/simulation/calcs/wf_tree_sim.py:78\u001b[0m, in \u001b[0;36mWrightFisherTreeSimulation.run\u001b[0;34m(self, tree, output_directory, population_size, mutation_rate, num_generations, burn_in_generations, write_prefix)\u001b[0m\n\u001b[1;32m     76\u001b[0m calc_params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mburn_in_generations\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m burn_in_generations\n\u001b[0;32m---> 78\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_prepare_calc\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_directory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moutput_directory\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     79\u001b[0m \u001b[43m                   \u001b[49m\u001b[43mcalc_params\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcalc_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     81\u001b[0m \u001b[38;5;66;03m# Run and return a Wright Fisher simulation\u001b[39;00m\n",
+      "File \u001b[0;32m~/work/programming/git-clones/eee/eee/simulation/calcs/simulation_base.py:191\u001b[0m, in \u001b[0;36mSimulation._prepare_calc\u001b[0;34m(self, output_directory, calc_params)\u001b[0m\n\u001b[1;32m    190\u001b[0m     err \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124moutput_directory (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_directory\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) already exists\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 191\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m(err)\n\u001b[1;32m    193\u001b[0m \u001b[38;5;66;03m# Create output directory and change into it\u001b[39;00m\n",
+      "\u001b[0;31mFileExistsError\u001b[0m: \noutput_directory (eee_wf-tree) already exists\n\n",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mWrappedFunctionException\u001b[0m                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 10\u001b[0m\n\u001b[1;32m      3\u001b[0m conditions \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfitness_fcn\u001b[39m\u001b[38;5;124m\"\u001b[39m:[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moff\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mon\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m      4\u001b[0m               \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miptg\u001b[39m\u001b[38;5;124m\"\u001b[39m:[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m4\u001b[39m]}\n\u001b[1;32m      6\u001b[0m wf \u001b[38;5;241m=\u001b[39m eee\u001b[38;5;241m.\u001b[39msimulation\u001b[38;5;241m.\u001b[39mcalcs\u001b[38;5;241m.\u001b[39mWrightFisherTreeSimulation(ens\u001b[38;5;241m=\u001b[39mens,\n\u001b[1;32m      7\u001b[0m                                                      ddg_df\u001b[38;5;241m=\u001b[39mddg_df,\n\u001b[1;32m      8\u001b[0m                                                      conditions\u001b[38;5;241m=\u001b[39mconditions)\n\u001b[0;32m---> 10\u001b[0m \u001b[43mwf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtree\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnewick\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m       \u001b[49m\u001b[43mpopulation_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m       \u001b[49m\u001b[43mmutation_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m       \u001b[49m\u001b[43mnum_generations\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m       \u001b[49m\u001b[43mburn_in_generations\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m       \u001b[49m\u001b[43moutput_directory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43meee_wf-tree\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \n",
+      "File \u001b[0;32m~/work/programming/git-clones/eee/eee/_private/interface.py:38\u001b[0m, in \u001b[0;36mrun_cleanly.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     36\u001b[0m     err \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirectory and cleaning up. Check error stack for cause of\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     37\u001b[0m     err \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthis error.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 38\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m WrappedFunctionException(err) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m value\n",
+      "\u001b[0;31mWrappedFunctionException\u001b[0m: \n\nCaught exception in function 'run'. Returning to starting\ndirectory and cleaning up. Check error stack for cause of\nthis error.\n\n"
      ]
     }
    ],
    "source": [
     "newick = '((A:0.1,B:0.5):0.5,(C:0.3,D:0.7):0.3);'\n",
     "\n",
-    "gc, tree = eee.evolve.simulate_tree(ens=ens,\n",
-    "                                 ddg_df=ddg_df,\n",
-    "                                 mu_dict={\"iptg\":[1,4]},\n",
-    "                                 fitness_fcns=[eee.evolve.ff_off,\n",
-    "                                               eee.evolve.ff_on],\n",
-    "                                 newick=newick,\n",
-    "                                 select_on=\"fx_obs\",\n",
-    "                                 population_size=1000,\n",
-    "                                 mutation_rate=0.01,\n",
-    "                                 num_generations=1000,\n",
-    "                                 burn_in_generations=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2f3fd7bb-6f47-420b-b131-020211fd6636",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "anc0 LLRG\n",
-      "anc1 KLRG\n",
-      "anc2 HLRG\n",
-      "A KLRG\n",
-      "B KLRG\n",
-      "C KLRG\n",
-      "D KLRG\n"
-     ]
-    }
-   ],
-   "source": [
-    "alignment, tree = eee.evolve.extract_alignment(gc,tree,include_ancestors=True)\n",
-    "for a in alignment:\n",
-    "    print(a,alignment[a])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "955dd76a-1f78-4065-b115-922bb71a6b6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "with open('yo.pickle','wb') as f:\n",
-    "    pickle.dump(tree,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49bc3b89-0eeb-42e6-965d-0adaf158c8fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('yo.pickle','rb') as f:\n",
-    "    x = pickle.load(f)\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b72be5e-7ffd-4fdc-af25-43f018e6133d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80c2280a-3355-405f-bf06-6e98ff563605",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.generations"
+    "conditions = {\"fitness_fcn\":[\"off\",\"on\"],\n",
+    "              \"iptg\":[1,4]}\n",
+    "\n",
+    "wf = eee.simulation.calcs.WrightFisherTreeSimulation(ens=ens,\n",
+    "                                                     ddg_df=ddg_df,\n",
+    "                                                     conditions=conditions)\n",
+    "\n",
+    "# Delete output directory if it already exists\n",
+    "import os\n",
+    "import shutil\n",
+    "if os.path.exists(\"eee_wf-tree\"):\n",
+    "    shutil.rmtree(\"eee_wf-tree\")\n",
+    "\n",
+    "wf.run(tree=newick,\n",
+    "       population_size=1000,\n",
+    "       mutation_rate=0.01,\n",
+    "       num_generations=10000,\n",
+    "       burn_in_generations=10,\n",
+    "       output_directory=\"eee_wf-tree\") \n",
+    "\n"
    ]
   },
   {
