updated example to match new api

--- a/example/calc_ensemble_epistasis.ipynb
+++ b/example/calc_ensemble_epistasis.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ens = eee.Ensemble()\n",
+    "ens = eee.core.Ensemble()\n",
     "ens.add_species(\"hdna\",dG0=0,observable=True)\n",
     "ens.add_species(\"h\",dG0=5)\n",
     "ens.add_species(\"l2e\",dG0=5,observable=False,iptg=2)\n",
@@ -70,6 +70,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62118237-82eb-4232-ae8e-7c566d71b55f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from eee import analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1421a7c7-095d-42a8-9c71-def1bee9d90a",
    "metadata": {},
    "outputs": [],
@@ -79,11 +89,11 @@
     "mut12_dict = {\"hdna\":5,\"l2e\":-5}\n",
     "ligand_dict={\"iptg\":np.linspace(-5,5)}\n",
     "\n",
-    "df = eee.epistasis.get_ensemble_epistasis(ens,\n",
-    "                                          mut1_dict=mut1_dict,\n",
-    "                                          mut2_dict=mut2_dict,\n",
-    "                                          mut12_dict=mut12_dict,\n",
-    "                                          ligand_dict=ligand_dict)\n",
+    "df = analysis.epistasis.get_ensemble_epistasis(ens,\n",
+    "                                               mut1_dict=mut1_dict,\n",
+    "                                               mut2_dict=mut2_dict,\n",
+    "                                               mut12_dict=mut12_dict,\n",
+    "                                               ligand_dict=ligand_dict)\n",
     "\n",
     "fig, ax = plt.subplots(1,figsize=(6,6))\n",
     "ax.plot(df.iptg,df.fx_ep_mag)\n",
