--- a/example/run_wright_fisher_simulation.ipynb
+++ b/example/run_wright_fisher_simulation.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "ens = eee.Ensemble()\n",
+    "ens = eee.core.Ensemble()\n",
     "ens.add_species(\"hdna\",dG0=0,observable=True)\n",
     "ens.add_species(\"h\",dG0=5)\n",
     "ens.add_species(\"l2e\",dG0=5,observable=False,iptg=2)\n",
@@ -112,9 +112,9 @@
     "              \"select_on\":\"fx_obs\",\n",
     "              \"select_on_folded\":True}\n",
     "\n",
-    "sc = eee.simulation.calcs.WrightFisherSimulation(ens=ens,\n",
-    "                                                 ddg_df=ddg_df,\n",
-    "                                                 conditions=conditions)\n",
+    "sc = eee.calcs.WrightFisherSimulation(ens=ens,\n",
+    "                                      ddg_df=ddg_df,\n",
+    "                                      conditions=conditions)\n",
     "# Delete output directory if it already exists\n",
     "import os\n",
     "import shutil\n",
@@ -138,7 +138,7 @@
     "import os\n",
     "print(os.listdir(\"test_run/\"))\n",
     "\n",
-    "with open(\"test_run/simulation.json\") as f:\n",
+    "with open(\"test_run/input/simulation.json\") as f:\n",
     "    run_info = json.load(f)\n",
     "print(run_info)"
    ]
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = eee.simulation.analysis.get_genotype_frequencies(generations)\n",
+    "df = eee.analysis.get_genotype_frequencies(generations)\n",
     "gen = np.arange(len(generations))\n",
     "for x in df.columns:\n",
     "    plt.plot(gen,df[x],'-')  \n",
